infra/security.tf
resource "aws_security_group" "knossos_sg" {
  name        = "knossos-sg"
  description = "Allow SSH and API access"
  vpc_id      = data.aws_vpc.default.id

  tags = {
    Name = "knossos-sg"
  }
}

resource "aws_vpc_security_group_ingress_rule" "allow_ssh" {
  security_group_id = aws_security_group.knossos_sg.id
  cidr_ipv4         = "0.0.0.0/0"
  from_port         = 22
  to_port           = 22
  ip_protocol       = "tcp"
}

resource "aws_vpc_security_group_ingress_rule" "allow_api" {
  security_group_id = aws_security_group.knossos_sg.id
  cidr_ipv4         = "0.0.0.0/0"
  from_port         = 3000
  to_port           = 3000
  ip_protocol       = "tcp"
}

resource "aws_vpc_security_group_egress_rule" "allow_all_outbound" {
  security_group_id = aws_security_group.knossos_sg.id
  cidr_ipv4         = "0.0.0.0/0"
  ip_protocol       = "-1"
}

resource "aws_security_group" "rds_sg" {
  name        = "knossos-rds-sg"
  description = "Allow Postgres access from EC2 only"
  vpc_id      = data.aws_vpc.default.id

  tags = {
    Name = "knossos-rds-sg"
  }
}

resource "aws_vpc_security_group_ingress_rule" "allow_postgres_from_ec2" {
  security_group_id            = aws_security_group.rds_sg.id
  referenced_security_group_id = aws_security_group.knossos_sg.id
  from_port                    = 5432
  to_port                      = 5432
  ip_protocol                  = "tcp"
}
